fixed spacing on addcontact Error message

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,21 +2,9 @@ body
 {
     margin: 0;
     padding: 0;
-    /*background-color: #707070;*/
-   /* background-color: #1B777C;*/
-    background-color: #ffffff;
+    background-color: #05263B;
+    /*background-image: url("../images/wave6.jpg");*/
 }
-
-/*#title 
-{
-    font-size: 40px;
-    width: 100%;
-    margin: 2%;
-    margin: 2% 5%;
-    text-align: center;
-    font-family: 'Ubuntu', sans-serif;
-    color: #FFFFFF;
-}*/
 
 #headerDiv
 {
@@ -24,30 +12,25 @@ body
     margin: auto;
     padding: 25px;
     /*box-sizing: border-box;*/
-    /*background-color: #1724bc;*/
-   /* background-color: #1A8268;*/
-    background-color: #4c4ca1;
-    background-color: #0A769D;
+    background-color: #163B50;
     /*border-style: solid;*/
     text-align: center;
 }
 #loginDiv
 {
     font-size: 30px;
-    width: 50%;
+    width: 20%;
+    height: 35%;
     /*width: 70%;*/
     /*margin-left: 15%;*/
     text-align: center;
     margin: auto;
-    margin-top: 5%;
+    margin-top: 7%;
     padding: 25px;
     border-style: solid;
     border-radius: 20px;
-    /*background-color: #b2b2b2;*/
-     /*background-color: #268E5A; */
-    /*background-color: #1B777C;*/
-   /* background-color: #1BB6A0;*/
-    background-color: #083E8F;
+    /*background-color: #083E8F;*/
+    background-color: #AEB8C4;
 }
 
 #loggedInDiv
@@ -80,14 +63,10 @@ body
 .buttons
 {
     font-size: 30px;
-    /*border: 25px;*/
-    border-radius: 25px;
-    /*border-style: solid;*/
-    /*border: 25px;*/
-    /*width: 50%;*/
+    border-radius: 10px;
     width: 40%;
     margin-bottom: 2%;
-    /*margin-left: 25%;*/
+    background-color: #EBEDF3;
     font-family: 'Ubuntu', sans-serif;
 }
 
@@ -100,10 +79,16 @@ body
 #loginName
 {
 	font-size: 30px;
+    border-radius: 5px;
+    background-color: #EBEDF3;
 }
 #loginPassword
 {
 	font-size: 30px;
+    border-radius: 5px;
+    margin-bottom: 5%;
+    background-color: #EBEDF3;
+
 }
 #searchText
 {
@@ -127,26 +112,25 @@ input[type="text"],input[type="password"]{
 #inner-title{
     display: inline-block;
     font-size: 0.8em;
-    width: 90%;
-    /*text-align: center;*/
-    /*margin-left: 10%;*/
-    margin-bottom: 2%;
+    width: 50%;
+    /*margin-bottom: 2%;*/
+    margin-bottom: 10%;
     font-family: 'Ubuntu', sans-serif;
     /*border-bottom: 5px solid black;*/
-    border-bottom: 5px solid rgba(0, 0, 0, .7);
+    /*border-bottom: 5px solid rgba(0, 0, 0, .7);*/
     /*background-color: #000000;*/
-    color: #ffffff;
+    color: #05263B;
 }
 #outer-title{
     display: inline-block;
-    font-size: 0.8em;
-    width: 90%;
+    font-size: 0.6em;
+    width: 50%;
     /*text-align: center;*/
     /*margin-left: 10%;*/
     margin-bottom: 2%;
     font-family: 'Ubuntu', sans-serif;
     /*border-bottom: 5px solid black;*/
-    border-top: 5px solid rgba(0, 0, 0, .7);
+    /*border-top: 5px solid rgba(0, 0, 0, .7);*/
     padding-top: 15px;
 
     /*background-color: #000000;*/
@@ -211,11 +195,14 @@ select{
 	align-items: center;
 }
 
-.modal {
+.modal 
+{
+    text-align: center;
 	width: 300px;
 	background-color: white;
 	padding: 20px;
-	border-radius: 5px;
+	border-style: solid;
+    border-radius: 20px;
 }
 .selected {
     background-color: blue;
@@ -230,5 +217,25 @@ select{
 }
 
 .deleteButton {
+    margin-bottom: 10px;
+}
+
+.registerModal
+{
+    width: 25%;
+    text-align: center;
+    top: 50px;
+    margin: auto;
+    position:absolute;
+	background-color: rgb(142, 41, 41);
+	padding: 20px;
+	border-radius: 5px;
+}
+
+#contactAddError {
+    color: red;
+    font-size: 1em;
+    font-weight: bold;
+    text-align: center;
     margin-bottom: 10px;
 }
